fixed main-content on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -62,4 +62,11 @@ h2 {
 
 .main-content {
   padding: 0 10rem;
+  justify-items: center;
+}
+
+@media screen and (max-width: 600px) {
+  .main-content {
+    padding: 12px;;
+  }
 }
