--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -1,9 +1,28 @@
 .team-container {
+  max-width: 100%;
   display: grid;
   justify-content: center;
-    grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto auto;
 
 }
 
 .team-container > img {
+  max-width: 30vw;
+}
+
+.team-container > img {
+  max-width: 200px;
+}
+
+@media screen and (max-width: 600px) {
+  .team-container > img {
+  max-width: 30vw;
+  }
+}
+
+h1 {
+  display: block;
+  margin-left:auto;
+  margin-right:auto;
+  text-align: center;
 }
